# hermes-memory-engine

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  test_evolution_ingestion.py  test_recursive_learning.py
alembic/: env.py
alembic/versions/: e6288eb976ce_initial_schema.py
application/: autonomous_orchestrator.py  decision_orchestrator.py  engine.py  orchestrator.py  proactive_agent.py  refinement_orchestrator.py
application/agency/: __init__.py  dispatcher.py
core/: analyzer.py  insight_trigger.py  monitor.py  monitor_models.py  refinement_engine.py  refinement_orchestrator.py
domain/core/: agent.py  agents_impl.py  analyzer.py  anomaly_config.py  anomaly_detector.py  (+12 more)
infrastructure/: llm_implementations.py  llm_interface.py  paths.py  youtube_content.py
scripts/: episodic_migration.py  execute_first_contact.py  stress_test_proactive_loop.py  test_llm_connectivity.py
src/: hermes_memory_tools.py  mcp_server.py
tests/: test_acl_missing_paths.py  test_acl_translators.py  test_anomaly_detector.py  test_autonomous_orchestrator.py  test_autonomous_retry_cap.py  test_config_loader.py  test_continuity_loop.py  test_event_extractor.py  test_evolution_ingestion.py  test_full_system_orchestration_v2.py  test_graph_analyzer.py  test_infra_and_models_coverage.py  test_ingestion_loop.py  test_insight_trigger.py  test_insight_trigger_sanitization.py  test_ledger.py  test_monitor.py  test_orchestration.py  test_orchestration_real.py  test_paths.py  test_prompt_sanitizer.py  test_recursive_learning.py  test_refinement.py  test_refinement_engine_preemptive.py  test_refinement_orch_and_ledger_coverage.py  test_refinement_registry.py  test_review_fixes.py  test_semantic_memory_coverage.py  test_structural_bridge.py  test_synthesis.py  test_synthesis_coverage.py  test_synthesizer_coverage.py  verify_intelligence_v3.py
utils/: pattern_generator.py
(+11 files in other folders)
