[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-memory-core"
version = "0.1.0"
description = "Core logic for the Hermes Memory Engine, including the Structural Ledger and Semantic Memory layers."
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "chromadb>=0.4",
    "networkx>=3.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "openai>=1.0",
    "alembic>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=24.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["domain*", "application*", "infrastructure*"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["domain", "application", "infrastructure"]
